Fixed line spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -249,7 +249,7 @@
 }
 
 .post-content p {
-	 line-height: $base-line-height * 1.1;
+	 line-height: $base-line-height;
 }
 
 /* Div layouts for teaser blocks */
